--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,23 +1,17 @@
 <h2>Your Current Tickets</h2>
 
-<!-- GET /api/v2/tickets.json -->
-
 <%@tickets.each do |ticket|%>
 
-<h4><td><%= link_to "Show", ticket.subject %></td></h4>
-    <ol>
-      <li>ticket.priority</li>
-      <li>ticket.status </li>
-      <li>ticket.created_at</li>
-  </ol>
-<%end%>
+<a href="/tickets/<%=ticket['id']%>"> <h3 id="event_title"><%=ticket['subject']%></h3></a>
 
-Pages icons go here
-<button>Next Page</button>
+   <div style="margin-left:2rem">
+      <%=ticket['description']%>
+   </div>
 
-<!-- Requirements
-1 - Connect to the Zendesk API and request all the tickets for your account
-2 - Display all tickets in a list >> Page through tickets when more than 25 are returned
-3 - Display individual ticket details -->
+<% end %>
 
-<!-- AJAX call here -->
+<%= will_paginate @tickets %>
+
+<!-- TO DO
+TESTING
+NICE STYLING -->
