--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,72 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+// RESET START
+
+*{
+  padding:0px;
+  margin:0px;
+  color:black;
+  list-style: none;
+	text-decoration:none;
+}
+
+html,
+body {
+	margin:0;
+	padding:0;
+	height:100%;
+}
+
+// RESET END
+
+p, ol, ul, td {
+  font-family: "Lucida Sans Unicode", "Lucida Grande";
+}
+
+body {
+  color: #333;
+  font-family: "Lucida Sans Unicode", "Lucida Grande";
+	background-color: #fff;
+}
+
+.container {
+  padding-bottom:50px; /* Height of the footer element */
+	position:relative;
+  margin-left:7%;
+  width:70%;
+}
+
+.error_message {
+  color: #9F6000;
+  background-color: #FEEFB3;
+  margin-left:2rem
+}
+
+#ticket_title{
+	color:#666;
+	cursor:pointer;
+}
+
+#ticket_title:hover{
+	text-decoration:underline;
+}
+
+header {
+	padding-left: 4rem;
+	margin-bottom: 1rem;
+	padding-top: .1rem;
+	height:6rem;
+  background-color: #78a300;
+  color:white;
+  font-family: "Lucida Sans Unicode", "Lucida Grande";
+}
+
+.pagination {
+  .previous_page { background:#7777ff; color:white }
+  .previous_page.disabled { background: white; color: #777 }
+  .current { background: yellow }
+  .next_page { background: #7777ff; color: white }
+  .next_page.disabled { background: white; color: #777 }
+}
+
+.description {
+	margin-left:2rem
+}
