--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Zendesk Ticket Tracking System</h1>
+    <h1 class="header_title">Zendesk Ticket Tracking System</h1>
   </header>
 
   <div class="error_message">
