--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,7 +37,7 @@ body {
 .error_message {
   color: #9F6000;
   background-color: #FEEFB3;
-  margin-left:2rem
+  margin-left:2rem;
 }
 
 #ticket_title{
@@ -69,4 +69,12 @@ header {
 
 .description {
 	margin-left:2rem
+}
+
+.ticket_id_and_status, .ticket_time_details {
+  margin-bottom:2rem;
+}
+
+.page_title {
+  color: #78A300;
 }
