--- a/app/views/tickets/zendesk_offline.html.erb
+++ b/app/views/tickets/zendesk_offline.html.erb
@@ -2,4 +2,8 @@
 
 <h2>We're so sorry about this!</h2>
 
-<h5>Unfortunately it looks like you've run into an error. We're so sorry for the inconvinence.<br> Please run through our likely issues <a>here</a> or we're able to take your call anytime to help fix the problem on +61 03 9876 5432</h5>
+<h5>Unfortunately it looks like you've run into an error. We're so sorry for the inconvinence.</h5>
+
+<h5>
+  Please run through our likely issues <a>here</a> or we're able to take your call anytime to help fix the problem on +61 03 9876 5432
+</h5>
