--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -7,7 +7,7 @@
     <% end %>
 
     <div class="description"><%= ticket.description %></div>
-  <% end %>.
+  <% end %>
 
 <% else %>
   <h3>Sorry this service is presently offline</h3>
