--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </header>
 
   <div class="error_message">
-    <%= flash[:notice] %>
+    <%= flash[:error] %>
   </div>
 
   <div class='container'>
